--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -10,32 +10,39 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="uk.ac.ed.faizan.objecttracker.MainActivity">
 
-
     <Button
         android:id="@+id/start_tracking_button"
+        android:padding="@dimen/main_button_padding"
+        android:layout_marginTop="@dimen/main_button_margin"
+        android:layout_marginBottom="@dimen/main_button_margin"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:drawableStart="@drawable/ic_starttracking"
+        android:drawableStart="@drawable/ic_starttracking_tablet_landscape"
         android:text="@string/start_tracking"
-        android:textSize="@dimen/main_button_textsize" />
+        android:textSize="@dimen/main_button_tablet_textsize" />
 
     <Button
         android:id="@+id/preferences_button"
+        android:padding="@dimen/main_button_padding"
+        android:layout_marginBottom="@dimen/main_button_margin"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:drawableStart="@drawable/ic_preferences"
+        android:drawableStart="@drawable/ic_preferences_tablet_landscape"
         android:text="@string/preferences"
-        android:textSize="@dimen/main_button_textsize" />
+        android:textSize="@dimen/main_button_tablet_textsize" />
 
     <Button
         android:id="@+id/view_recordings_button"
+        android:padding="@dimen/main_button_padding"
+        android:layout_marginBottom="@dimen/main_button_margin"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:drawableStart="@drawable/ic_viewrecording"
+        android:drawableStart="@drawable/ic_viewrecording_tablet_landscape"
         android:text="@string/view_recordings"
-        android:textSize="@dimen/main_button_textsize" />
+        android:textSize="@dimen/main_button_tablet_textsize" />
 
 </LinearLayout>
+
