--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,15 @@
+<!-- All global measurements are held here for easy code maintenance -->
+
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">8dp</dimen>
+    <dimen name="activity_vertical_margin">8dp</dimen>
+
+    <!-- Dimensions for button measurements on activity_main.xml. -->
+    <dimen name="main_button_margin">20dp</dimen>
+    <dimen name="main_button_padding">60dp</dimen>
+
+    <!-- Font sizes for buttons in activity_main for phone and tablet displays. -->
+    <dimen name="main_button_textsize">16sp</dimen>
+    <dimen name="main_button_tablet_textsize">55sp</dimen>
 </resources>
