--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Palette found at: https://material.google.com/style/color.html#color-color-palette -->
 <resources>
-    <!-- Palette found at: https://material.google.com/style/color.html#color-color-palette -->
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#1976D2</color>
 
     <!-- Widget colours -->
     <color name="colorAccent">#82B1FF</color>
-    <color name="colorButton">#BBDEFB</color>
+
+    <!-- Main Screen button's gradient colours -->
+    <color name="colorStartTrackingGradStart">#FF5252</color>
+    <color name="colorStartTrackingGradEnd">#E53935</color>
+
+    <color name="colorPreferencesGradStart">#69F0AE</color>
+    <color name="colorPreferencesGradEnd">#00C853</color>
+
+    <color name="colorViewRecordingsGradStart">#ffab40</color>
+    <color name="colorViewRecordingsGradEnd">#ff6d00</color>
 </resources>
