--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,8 @@
 
     <color name="colorViewRecordingsGradStart">#ffab40</color>
     <color name="colorViewRecordingsGradEnd">#ff6d00</color>
+
+    <!-- Camera Preview colours -->
+    <color name="cameraFrameColor">#000000</color>
+    <color name="uiTextColor">#FFFFFF</color>
 </resources>
