--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -7,52 +7,101 @@
     android:orientation="vertical"
     tools:context="uk.ac.ed.faizan.objecttracker.TrackingActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/camera_top_toolbar"
+        android:layout_weight="1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:paddingLeft="@dimen/camera_ui_horizontal_margin"
         android:paddingRight="@dimen/camera_ui_horizontal_margin"
         android:paddingTop="@dimen/camera_ui_vertical_margin"
-        android:paddingBottom="@dimen/camera_ui_vertical_margin"
-        android:orientation="horizontal">
+        android:paddingBottom="@dimen/camera_ui_vertical_margin">
 
         <Switch
             android:id="@+id/manual_tracking_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:textAppearanceSmall"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:textAppearance="?android:textAppearanceMedium"
             android:text="@string/manual_tracking_ui"
             android:textAllCaps="true"
-            android:textColor="@color/uiTextColor"/>
+            android:textColor="@android:color/white"/>
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/freeze_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:text="@string/freeze_button"
+            android:textAllCaps="true"
+            android:textColor="@android:color/white"/>
+
+    </RelativeLayout>
 
     <com.google.atap.tangoservice.TangoCameraPreview
-        android:layout_weight="12"
         android:id="@+id/camera_preview"
+        android:layout_weight="8"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/camera_bottom_toolbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:paddingLeft="@dimen/camera_ui_horizontal_margin"
         android:paddingRight="@dimen/camera_ui_horizontal_margin"
         android:paddingTop="@dimen/camera_ui_vertical_margin"
-        android:paddingBottom="@dimen/camera_ui_vertical_margin"
-        android:orientation="horizontal">
+        android:paddingBottom="@dimen/camera_ui_vertical_margin">
 
-        <Switch
-            android:id="@+id/manual_tracking_switch1"
+        <ImageView
+            android:id="@+id/pause_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:textAppearanceSmall"
-            android:text="@string/manual_tracking_ui"
-            android:textAllCaps="true"
-            android:textColor="@color/uiTextColor"/>
-    </LinearLayout>
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_pause" />
+
+        <TextView
+            android:id="@+id/timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_toStartOf="@id/pause_button"
+            android:text="@string/timestamp"
+            android:textColor="@android:color/white"
+            android:textAppearance="?android:textAppearanceMedium"/>
+
+        <ImageView
+            android:id="@+id/record_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/timestamp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_record" />
+
+        <ImageView
+            android:id="@+id/flashlight_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/pause_button"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_flash_auto"
+            android:onClick="showFlashPopupMenu"/>
+
+        <TextView
+            android:id="@+id/flashlight_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_toEndOf="@id/flashlight_button"
+            android:text="@string/flashlight_auto"
+            android:textColor="@android:color/white"
+            android:textAppearance="?android:textAppearanceSmall"/>
+    </RelativeLayout>
 
 
 
