Wrote some code to record from surface preview.
Camera service dies regularly, so going to attempt to use MediaCodec. Last
resort issue is removing Tango support for now, and sticking to a regular
SurfaceView. The problem with camera service arises because of Tango
service completely taking over the camera when the service is connected,
so making calls to the camera API outside of Tango service will not work.

--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -46,7 +46,7 @@
             android:background="?android:attr/selectableItemBackground"
             android:textAppearance="?android:textAppearanceSmall"
             android:text="@string/freeze_camera"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"/>
 
     </RelativeLayout>
 
@@ -91,7 +91,9 @@
             android:layout_height="wrap_content"
             android:layout_toStartOf="@id/timestamp"
             android:layout_centerInParent="true"
-            android:src="@drawable/ic_record" />
+            android:src="@drawable/ic_record"
+            android:clickable="true"
+            android:onClick="onCaptureClick"/>
 
         <ImageView
             android:id="@+id/flashlight_button"
