Videos being saved successfully.
Code needs refactored, need to work on UI, specifically, start a timer
when user records.

--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -50,7 +50,7 @@
 
     </RelativeLayout>
 
-    <com.google.atap.tangoservice.TangoCameraPreview
+    <SurfaceView
         android:id="@+id/camera_preview"
         android:layout_weight="8"
         android:layout_width="match_parent"
