--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -50,11 +50,22 @@
 
     </RelativeLayout>
 
-    <SurfaceView
-        android:id="@+id/camera_preview"
-        android:layout_weight="8"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="8">
+
+        <SurfaceView
+            android:id="@+id/camera_preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <SurfaceView
+            android:id="@+id/transparent_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
 
     <RelativeLayout
         android:id="@+id/camera_bottom_toolbar"
@@ -92,8 +103,7 @@
             android:layout_toStartOf="@id/timestamp"
             android:layout_centerInParent="true"
             android:src="@drawable/ic_record"
-            android:clickable="true"
-            android:onClick="onCaptureClick"/>
+            android:clickable="true" />
 
         <ImageView
             android:id="@+id/flashlight_button"
@@ -101,8 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/pause_button"
             android:layout_centerInParent="true"
-            android:src="@drawable/ic_flash_auto"
-            android:onClick="showFlashPopupMenu"/>
+            android:src="@drawable/ic_flash_auto" />
 
 
     </RelativeLayout>
