--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -56,7 +56,7 @@
         android:layout_height="0dp"
         android:layout_weight="8">
 
-        <SurfaceView
+        <org.opencv.android.JavaCameraView
             android:id="@+id/camera_preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
