--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -1,69 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:opencv="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#111111"
-    android:orientation="vertical"
     tools:context="uk.ac.ed.faizan.objecttracker.TrackingActivity">
-
-    <RelativeLayout
-        android:id="@+id/camera_top_toolbar"
-        android:layout_weight="1"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:paddingLeft="@dimen/camera_ui_horizontal_margin"
-        android:paddingRight="@dimen/camera_ui_horizontal_margin"
-        android:paddingTop="@dimen/camera_ui_vertical_margin"
-        android:paddingBottom="@dimen/camera_ui_vertical_margin">
-
-        <Switch
-            android:id="@+id/manual_tracking_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:text="@string/manual_mode"
-            android:textColor="@android:color/white"
-            android:layout_centerVertical="true"/>
-
-        <Button
-            android:id="@+id/select_color_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:background="?android:attr/selectableItemBackground"
-            android:text="@string/set_color"
-            android:textColor="@android:color/white"/>
-
-        <Button
-            android:id="@+id/freeze_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:background="?android:attr/selectableItemBackground"
-            android:textAppearance="?android:textAppearanceSmall"
-            android:text="@string/freeze_camera"
-            android:textColor="@android:color/white"/>
-
-    </RelativeLayout>
 
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8">
+        android:layout_height="match_parent">
 
         <org.opencv.android.JavaCameraView
             android:id="@+id/camera_preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="visible"
-            opencv:show_fps="true"
-            opencv:camera_id="back"/>
+            opencv:camera_id="back"
+            opencv:show_fps="false" />
+
         <SurfaceView
             android:id="@+id/transparent_view"
             android:layout_width="match_parent"
@@ -72,54 +27,56 @@
     </FrameLayout>
 
     <RelativeLayout
-        android:id="@+id/camera_bottom_toolbar"
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:paddingLeft="@dimen/camera_ui_horizontal_margin"
-        android:paddingRight="@dimen/camera_ui_horizontal_margin"
-        android:paddingTop="@dimen/camera_ui_vertical_margin"
-        android:paddingBottom="@dimen/camera_ui_vertical_margin">
+    android:id="@+id/toolbar_top"
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:layout_alignParentTop="true"
+    android:layout_centerHorizontal="true">
 
-        <ImageView
-            android:id="@+id/pause_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:src="@drawable/ic_pause" />
-
-        <TextView
-            android:id="@+id/timestamp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_toStartOf="@id/pause_button"
-            android:text="@string/timestamp"
-            android:textColor="@android:color/white"
-            android:textAppearance="?android:textAppearanceSmall"/>
-
-        <ImageView
-            android:id="@+id/record_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/timestamp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_record"
-            android:clickable="true" />
-
-        <ImageView
-            android:id="@+id/flashlight_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/pause_button"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_flash_auto" />
-
+    <Button
+        android:id="@+id/select_color_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="?android:attr/selectableItemBackground"
+        android:text="@string/set_color"
+        android:textColor="@android:color/white" />
 
     </RelativeLayout>
 
 
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/toolbar_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginBottom="@dimen/camera_ui_vertical_margin"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:id="@+id/timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/camera_ui_horizontal_margin"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:text="@string/timestamp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white" />
+
+        <ImageView
+            android:id="@+id/record_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_toStartOf="@id/timestamp"
+            android:clickable="true"
+            android:src="@drawable/ic_record" />
+
+
+        </RelativeLayout>
+
+
+</RelativeLayout>
