--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -80,13 +80,12 @@
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/white" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/record_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_toStartOf="@id/timestamp"
-            android:clickable="true"
             android:src="@drawable/ic_record" />
 
 
